# leptos_todo_try

./: .env  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  style.css
db/: Dockerfile.dev
src/: app.rs  lib.rs  main.rs  rustc-ice-2024-01-15T01_48_56-35360.txt  rustc-ice-2024-01-15T01_49_04-35445.txt  rustc-ice-2024-01-15T01_56_13-36534.txt  rustc-ice-2024-01-15T01_57_06-36623.txt  rustc-ice-2024-01-15T01_57_43-36760.txt
src/assets/: style.scss
src/migrations/: 20240115040559_users.up.sql
style/: main.scss
